<resources>
    <string name="app_name">Alarm Up</string>
    <string name="item_alarm">Alarm</string>
    <string name="item_time_zone">Time Zone</string>
    <string name="item_timer">Timer</string>

    <string name="word_day">day</string>
    <string name="word_days">days</string>
    <string name="word_minute">minute</string>
    <string name="word_minutes">minutes</string>
    <string name="word_hour">hour</string>
    <string name="word_hours">hours</string>
    <string name="word_join">and</string>


    <string name="msg_sleep_reminder">The alarm will ring about %s from now.</string>
    <string name="title_sleep_reminder">Sleep Reminder</string>
    <string name="desc_sleep_reminder">Send a notification reminding you to go to sleep a certain time before your alarm rings if you\'re using your phone.</string>
    <string name="title_sleep_reminder_time">Sleep Reminder Time</string>
    <string name="desc_sleep_reminder_time">%1$d hours before</string>
    <string name="title_alarm">Alarm %d</string>
    <string name="txt_alarm_label">Alarm Label</string>
    <string name="txt_timer_label">Timer Label</string>
    <string name="title_timer">Timer</string>
    <string name="txt_alarm_empty_text">Alarm is empty, \nPress the \'+\' button to create one</string>
    <string name="txt_timezone_empty_text">TimeZone is empty. \nPress the search icon to create one</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_activity_alarm_may_be">Maybe you don\'t know ?</string>
    <string name="cancel">Cancel</string>
    <string name="txt_timer_delete">Delete Timer</string>
    <string name="txt_m005_this_is">This is an alarm product that focuses on minimalism in design and is easy to use for everyone.</string>
    <string name="txt_idiot_developer">Inis</string>
    <string name="txt_m005_author">Author</string>
    <string name="txt_rate">Rate</string>
    <string name="txt_m005_alarm_up">Alarm Up</string>
    <string name="txt_m005_about_me">About App</string>
    <string name="txt_m005_update_theme">Update Theme</string>
    <string name="txt_m005_version_1_1">Version 1.1</string>
    <string name="prefs_theme_key">theme</string>
    <string name="txt_m003_search_city">Search city</string>
    <string name="txt_m003_item_search">Search for a city</string>
    <string name="txt_m003_item_city">CITY</string>
    <string name="txt_content_alarm">Content Alarm</string>
    <string name="txt_date">June 14 2017, 3:49 PM</string>
    <string name="txt_after_5_minutes">After 5 Minutes</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_1_more_minutes">One More Minute</string>
    <string name="txt_1_cancel">Cancel</string>
    <string name="txt_m002_item_vibrate">Vibrate</string>
    <string name="txt_m002_item_sound">Sound</string>
    <string name="txt_m005_update_language">Update Language</string>
    <string name="txt_m004_hours">Hours</string>
    <string name="txt_m004_minutes">Minutes</string>
    <string name="txt_m004_seconds">Seconds</string>
    <string name="txt_06_56">06 : 56</string>
    <string name="txt_repeat">Repeat</string>
    <string name="txt_m003_item_delete">Delete</string>
    <string name="txt_m003_item_12_40">12 : 40</string>
    <string name="txt_m003_item_date">Date</string>
    <string name="txt_m004_item_00_00_00">00 : 00 : 00</string>
    <string name="txt_bottom_bar_alarm">Alarm</string>
    <string name="txt_bottom_bar_timezone">Timezone</string>
    <string name="txt_bottom_bar_timer">Timer</string>
    <string name="txt_bottom_bar_settings">Settings</string>
    <string name="txt_dialog_timer">Please set a timer greater than 0 seconds and small than 24 hours !</string>
    <string name="txt_from_now">%s from now.</string>
    <string name="txt_got_it">I Got it</string>
    <string name="txt_m002_item_delete">Delete</string>
    <string name="txt_apply_language">Ngôn ngữ đã được cập nhật thành công !</string>
</resources>