<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_admob"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_80"
        android:orientation="vertical" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="@dimen/d_5"
        android:background="@color/colorAccent" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_m005_update_theme"
            android:layout_width="@dimen/d_20"
            android:layout_height="@dimen/d_20"
            android:layout_marginHorizontal="@dimen/d_10"
            android:src="@drawable/ic_theme"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_m005_update_theme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/txt_m005_update_theme"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/d_16"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/spinner_m005"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:theme="@style/Spinner"
            tools:targetApi="lollipop" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginVertical="@dimen/d_5"
        android:background="@color/colorAccent" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_m005_language"
            android:layout_width="@dimen/d_20"
            android:layout_height="@dimen/d_20"
            android:layout_marginHorizontal="@dimen/d_10"
            android:src="@drawable/ic_language"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_m005_language"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txt_m005_update_language"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/d_16"
            android:textStyle="normal" />

        <RadioGroup
            android:id="@+id/rd_m005_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_m005_vn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_20"
                android:layout_marginHorizontal="@dimen/d_20"
                android:text="VI"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/d_15" />

            <RadioButton
                android:id="@+id/rd_m005_en"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_20"
                android:layout_marginEnd="@dimen/d_20"
                android:layout_marginRight="@dimen/d_20"
                android:text="EN"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/d_15" />

        </RadioGroup>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginVertical="@dimen/d_5"
        android:background="@color/colorAccent" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_m005_about"
            android:layout_width="@dimen/d_20"
            android:layout_height="@dimen/d_20"
            android:layout_marginHorizontal="@dimen/d_10"
            android:src="@drawable/ic_about"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_m005_about"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription=""
            android:gravity="center_vertical"
            android:text="@string/txt_m005_about_me"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/d_16"
            android:textStyle="normal" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginVertical="@dimen/d_5"
        android:background="@color/colorAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ln_m005_about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/d_20"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/d_60"
                android:layout_height="@dimen/d_60"
                android:layout_marginTop="@dimen/d_10"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_10"
                android:text="@string/txt_m005_alarm_up"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/d_100"
                android:layout_height="0.2dp"
                android:layout_marginVertical="@dimen/d_15"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txt_m005_this_is"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <View
                android:layout_width="150dp"
                android:layout_height="0.2dp"
                android:layout_marginVertical="@dimen/d_15"
                android:background="@color/colorAccent" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_m005_rate"
                    android:layout_width="@dimen/d_25"
                    android:layout_height="@dimen/d_25"
                    android:src="@drawable/ic_rate"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_m005_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d_15"
                    android:layout_marginLeft="@dimen/d_15"
                    android:text="@string/txt_rate"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/d_16"
                    android:textStyle="bold" />
            </TableRow>

            <View
                android:layout_width="200dp"
                android:layout_height="0.2dp"
                android:layout_marginVertical="@dimen/d_15"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_m005_author"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/d_16"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_m005_author"
                android:layout_width="@dimen/d_60"
                android:layout_height="@dimen/d_60"
                android:layout_marginTop="@dimen/d_10"
                android:src="@drawable/ic_author" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_10"
                android:text="@string/txt_idiot_developer"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/d_15"
                android:text="@string/txt_m005_version_1_1"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/d_16" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>